# discord-nuker-OXI-VERSION

./: config.json  main.py  pyproject.toml  readme.md  sus.txt
OXISPACE/: channels.txt  members.txt  roles.txt
